Fixed schedule on IOS now too

--- a/app/scss/schedule.scss
+++ b/app/scss/schedule.scss
@@ -121,7 +121,7 @@
 		.Ensuite {
 			background-color: $ensuite;
 		}
-		&.Oliver {
+		&.Oliver.Heldens {
 			margin-top: 30px;
 		}
 		&.Bellen .Quartz {
